# total_segmentaor_optimization

./: .gitignore  01_download_data.py  02_export_model.py  03_vanilla_benchmark.py  04_onnx_benchmark.py  05_optimized_python_benchmark.py  06_inferenceAndPassport.py  06_linux_production_benchmark.py  07_compare_vanilla_vs_optimized.py  BENCHMARK_RESULTS.md  INFERENCE_PERFORMANCE_INVESTIGATION.md  README.md  TESTING_GUIDE.md  TOTALSEGMENTATOR_TEST_DATASETS.md  cost_analysis.md
benchmarks/: 01_vanilla_benchmark_results.md  02_onnx_benchmark_results.md  04_python_onnx_final_report.md  05_comprehensive_comparison_report.md  analyze_baseline.py  compare_onnx_vanilla.py  final_comparison_report.md  final_detailed_comparison.md
benchmarks/onnx_benchmark_results/: onnx_ground_truth.json
benchmarks/rust_benchmark_results/: rust_benchmark_20.json
benchmarks/vanilla_benchmark_results/: vanilla_ground_truth.json
docs/: fast_model_pipeline.md
rust/: Cargo.toml
rust/src/: main.rs  postprocess.rs  preprocess.rs
