[package]
name = "totalseg_rust"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.53", features = ["derive"] }
itertools = "0.14.0"
nd_interpolate = "2.0.2"
ndarray = "0.16.1"
ndarray-interp = "0.4.0"
ndarray-stats = "0.5.1"
nifti = "0.17.0"
ort = { version = "2.0.0-rc.10", features = ["ndarray"] }

rayon = "1.10.0"

serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.147"
